[package]
name = "ex-kafka-p"
version = "0.1.0"
authors = ["zxc <codehackfox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap={version="2.33"}
tokio = { version = "0.2", features = ["full"] }
rdkafka = { version = "0.24", features = ["cmake-build"] }
futures = { version = "0.3"}
log = { version = "0.4.11", features = ["std", "serde"] }
env_logger = "^0.8.0"
chrono = "^0.4.0"