[package]
name = "xtool"
version = "0.1.0"
authors = ["zxc <codehackfox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.0", features = [ "runtime-tokio-rustls", "mysql", "time"] }
tokio = {version = "0.2", features = ["full"]}
serde = {version = "1.0"}
log = { version = "0.4.11", features = ["std", "serde"] }
env_logger = "^0.8.0"
yaml-rust= {version = "0.4"}
dotenv = "^0.15.0"
chrono = "^0.4.0"